run jextract