@@ -7,14 +7,13 @@ package com.jyuzawa.onnxruntime_extern;
 import static java.lang.foreign.ValueLayout.*;
 
 import java.lang.foreign.*;
-import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 
 /**
  * {@snippet :
  * struct OrtAllocator {
- *     uint32_t version;
- *     void* (*Alloc)(struct OrtAllocator*,size_t);
+ *     unsigned int version;
+ *     void* (*Alloc)(struct OrtAllocator*,unsigned long);
  *     void (*Free)(struct OrtAllocator*,void*);
  *     struct OrtMemoryInfo* (*Info)(struct OrtAllocator*);
  * };
@@ -22,71 +21,57 @@ import java.lang.invoke.VarHandle;
  */
 public class OrtAllocator {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    Constants$root.C_INT$LAYOUT.withName("version"),
-                    MemoryLayout.paddingLayout(32),
-                    Constants$root.C_POINTER$LAYOUT.withName("Alloc"),
-                    Constants$root.C_POINTER$LAYOUT.withName("Free"),
-                    Constants$root.C_POINTER$LAYOUT.withName("Info"))
-            .withName("OrtAllocator");
-
     public static MemoryLayout $LAYOUT() {
-        return OrtAllocator.$struct$LAYOUT;
+        return constants$0.const$0;
     }
 
-    static final VarHandle version$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("version"));
-
     public static VarHandle version$VH() {
-        return OrtAllocator.version$VH;
+        return constants$0.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * uint32_t version;
+     * unsigned int version;
      * }
      */
     public static int version$get(MemorySegment seg) {
-        return (int) OrtAllocator.version$VH.get(seg);
+        return (int) constants$0.const$1.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * uint32_t version;
+     * unsigned int version;
      * }
      */
     public static void version$set(MemorySegment seg, int x) {
-        OrtAllocator.version$VH.set(seg, x);
+        constants$0.const$1.set(seg, 0L, x);
     }
 
     public static int version$get(MemorySegment seg, long index) {
-        return (int) OrtAllocator.version$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$0.const$1.get(seg, index * sizeof());
     }
 
     public static void version$set(MemorySegment seg, long index, int x) {
-        OrtAllocator.version$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$0.const$1.set(seg, index * sizeof(), x);
     }
-
-    static final FunctionDescriptor Alloc$FUNC = FunctionDescriptor.of(
-            Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
-    static final MethodHandle Alloc$MH = RuntimeHelper.downcallHandle(OrtAllocator.Alloc$FUNC);
     /**
      * {@snippet :
-     * void* (*Alloc)(struct OrtAllocator*,size_t);
+     * void* (*Alloc)(struct OrtAllocator*,unsigned long);
      * }
      */
     public interface Alloc {
 
         java.lang.foreign.MemorySegment apply(java.lang.foreign.MemorySegment _x0, long _x1);
 
-        static MemorySegment allocate(Alloc fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(Alloc.class, fi, OrtAllocator.Alloc$FUNC, scope);
+        static MemorySegment allocate(Alloc fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$0.const$3, fi, constants$0.const$2, scope);
         }
 
-        static Alloc ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static Alloc ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, long __x1) -> {
                 try {
-                    return (java.lang.foreign.MemorySegment) OrtAllocator.Alloc$MH.invokeExact(symbol, __x0, __x1);
+                    return (java.lang.foreign.MemorySegment) constants$0.const$4.invokeExact(symbol, __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -94,45 +79,39 @@ public class OrtAllocator {
         }
     }
 
-    static final VarHandle Alloc$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Alloc"));
-
     public static VarHandle Alloc$VH() {
-        return OrtAllocator.Alloc$VH;
+        return constants$0.const$5;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * void* (*Alloc)(struct OrtAllocator*,size_t);
+     * void* (*Alloc)(struct OrtAllocator*,unsigned long);
      * }
      */
     public static MemorySegment Alloc$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Alloc$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$0.const$5.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * void* (*Alloc)(struct OrtAllocator*,size_t);
+     * void* (*Alloc)(struct OrtAllocator*,unsigned long);
      * }
      */
     public static void Alloc$set(MemorySegment seg, MemorySegment x) {
-        OrtAllocator.Alloc$VH.set(seg, x);
+        constants$0.const$5.set(seg, 0L, x);
     }
 
     public static MemorySegment Alloc$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Alloc$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$0.const$5.get(seg, index * sizeof());
     }
 
     public static void Alloc$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtAllocator.Alloc$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$0.const$5.set(seg, index * sizeof(), x);
     }
 
-    public static Alloc Alloc(MemorySegment segment, SegmentScope scope) {
+    public static Alloc Alloc(MemorySegment segment, Arena scope) {
         return Alloc.ofAddress(Alloc$get(segment), scope);
     }
-
-    static final FunctionDescriptor Free$FUNC =
-            FunctionDescriptor.ofVoid(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
-    static final MethodHandle Free$MH = RuntimeHelper.downcallHandle(OrtAllocator.Free$FUNC);
     /**
      * {@snippet :
      * void (*Free)(struct OrtAllocator*,void*);
@@ -142,15 +121,15 @@ public class OrtAllocator {
 
         void apply(java.lang.foreign.MemorySegment _x0, java.lang.foreign.MemorySegment _x1);
 
-        static MemorySegment allocate(Free fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(Free.class, fi, OrtAllocator.Free$FUNC, scope);
+        static MemorySegment allocate(Free fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1.const$1, fi, constants$1.const$0, scope);
         }
 
-        static Free ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static Free ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, java.lang.foreign.MemorySegment __x1) -> {
                 try {
-                    OrtAllocator.Free$MH.invokeExact(symbol, __x0, __x1);
+                    constants$1.const$2.invokeExact(symbol, __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -158,10 +137,8 @@ public class OrtAllocator {
         }
     }
 
-    static final VarHandle Free$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Free"));
-
     public static VarHandle Free$VH() {
-        return OrtAllocator.Free$VH;
+        return constants$1.const$3;
     }
     /**
      * Getter for field:
@@ -170,7 +147,7 @@ public class OrtAllocator {
      * }
      */
     public static MemorySegment Free$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Free$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$1.const$3.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -179,24 +156,20 @@ public class OrtAllocator {
      * }
      */
     public static void Free$set(MemorySegment seg, MemorySegment x) {
-        OrtAllocator.Free$VH.set(seg, x);
+        constants$1.const$3.set(seg, 0L, x);
     }
 
     public static MemorySegment Free$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Free$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$1.const$3.get(seg, index * sizeof());
     }
 
     public static void Free$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtAllocator.Free$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$1.const$3.set(seg, index * sizeof(), x);
     }
 
-    public static Free Free(MemorySegment segment, SegmentScope scope) {
+    public static Free Free(MemorySegment segment, Arena scope) {
         return Free.ofAddress(Free$get(segment), scope);
     }
-
-    static final FunctionDescriptor Info$FUNC =
-            FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
-    static final MethodHandle Info$MH = RuntimeHelper.downcallHandle(OrtAllocator.Info$FUNC);
     /**
      * {@snippet :
      * struct OrtMemoryInfo* (*Info)(struct OrtAllocator*);
@@ -206,15 +179,15 @@ public class OrtAllocator {
 
         java.lang.foreign.MemorySegment apply(java.lang.foreign.MemorySegment _x0);
 
-        static MemorySegment allocate(Info fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(Info.class, fi, OrtAllocator.Info$FUNC, scope);
+        static MemorySegment allocate(Info fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1.const$5, fi, constants$1.const$4, scope);
         }
 
-        static Info ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static Info ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0) -> {
                 try {
-                    return (java.lang.foreign.MemorySegment) OrtAllocator.Info$MH.invokeExact(symbol, __x0);
+                    return (java.lang.foreign.MemorySegment) constants$2.const$0.invokeExact(symbol, __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -222,10 +195,8 @@ public class OrtAllocator {
         }
     }
 
-    static final VarHandle Info$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Info"));
-
     public static VarHandle Info$VH() {
-        return OrtAllocator.Info$VH;
+        return constants$2.const$1;
     }
     /**
      * Getter for field:
@@ -234,7 +205,7 @@ public class OrtAllocator {
      * }
      */
     public static MemorySegment Info$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Info$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$2.const$1.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -243,18 +214,18 @@ public class OrtAllocator {
      * }
      */
     public static void Info$set(MemorySegment seg, MemorySegment x) {
-        OrtAllocator.Info$VH.set(seg, x);
+        constants$2.const$1.set(seg, 0L, x);
     }
 
     public static MemorySegment Info$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment) OrtAllocator.Info$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$2.const$1.get(seg, index * sizeof());
     }
 
     public static void Info$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtAllocator.Info$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$2.const$1.set(seg, index * sizeof(), x);
     }
 
-    public static Info Info(MemorySegment segment, SegmentScope scope) {
+    public static Info Info(MemorySegment segment, Arena scope) {
         return Info.ofAddress(Info$get(segment), scope);
     }
 
@@ -270,7 +241,7 @@ public class OrtAllocator {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) {
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) {
         return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope);
     }
 }
