@@ -20,18 +20,17 @@ public interface OrtCustomCreateThreadFn {
             java.lang.foreign.MemorySegment ort_thread_worker_fn,
             java.lang.foreign.MemorySegment ort_worker_fn_param);
 
-    static MemorySegment allocate(OrtCustomCreateThreadFn fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(
-                OrtCustomCreateThreadFn.class, fi, constants$0.OrtCustomCreateThreadFn$FUNC, scope);
+    static MemorySegment allocate(OrtCustomCreateThreadFn fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$14.const$5, fi, constants$14.const$4, scope);
     }
 
-    static OrtCustomCreateThreadFn ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static OrtCustomCreateThreadFn ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _ort_custom_thread_creation_options,
                 java.lang.foreign.MemorySegment _ort_thread_worker_fn,
                 java.lang.foreign.MemorySegment _ort_worker_fn_param) -> {
             try {
-                return (java.lang.foreign.MemorySegment) constants$1.OrtCustomCreateThreadFn$MH.invokeExact(
+                return (java.lang.foreign.MemorySegment) constants$15.const$0.invokeExact(
                         symbol, _ort_custom_thread_creation_options, _ort_thread_worker_fn, _ort_worker_fn_param);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
