@@ -17,15 +17,15 @@ public interface OrtCustomJoinThreadFn {
 
     void apply(java.lang.foreign.MemorySegment ort_custom_thread_handle);
 
-    static MemorySegment allocate(OrtCustomJoinThreadFn fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(OrtCustomJoinThreadFn.class, fi, constants$1.OrtCustomJoinThreadFn$FUNC, scope);
+    static MemorySegment allocate(OrtCustomJoinThreadFn fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$15.const$1, fi, constants$13.const$5, scope);
     }
 
-    static OrtCustomJoinThreadFn ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static OrtCustomJoinThreadFn ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _ort_custom_thread_handle) -> {
             try {
-                constants$1.OrtCustomJoinThreadFn$MH.invokeExact(symbol, _ort_custom_thread_handle);
+                constants$14.const$1.invokeExact(symbol, _ort_custom_thread_handle);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
