@@ -15,7 +15,7 @@ import java.lang.invoke.VarHandle;
  *     char* device_type;
  *     unsigned char enable_vpu_fast_compile;
  *     char* device_id;
- *     size_t num_of_threads;
+ *     unsigned long num_of_threads;
  *     char* cache_dir;
  *     void* context;
  *     unsigned char enable_opencl_throttling;
@@ -25,28 +25,12 @@ import java.lang.invoke.VarHandle;
  */
 public class OrtOpenVINOProviderOptions {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    Constants$root.C_POINTER$LAYOUT.withName("device_type"),
-                    Constants$root.C_CHAR$LAYOUT.withName("enable_vpu_fast_compile"),
-                    MemoryLayout.paddingLayout(56),
-                    Constants$root.C_POINTER$LAYOUT.withName("device_id"),
-                    Constants$root.C_LONG_LONG$LAYOUT.withName("num_of_threads"),
-                    Constants$root.C_POINTER$LAYOUT.withName("cache_dir"),
-                    Constants$root.C_POINTER$LAYOUT.withName("context"),
-                    Constants$root.C_CHAR$LAYOUT.withName("enable_opencl_throttling"),
-                    Constants$root.C_CHAR$LAYOUT.withName("enable_dynamic_shapes"),
-                    MemoryLayout.paddingLayout(48))
-            .withName("OrtOpenVINOProviderOptions");
-
     public static MemoryLayout $LAYOUT() {
-        return OrtOpenVINOProviderOptions.$struct$LAYOUT;
+        return constants$10.const$4;
     }
 
-    static final VarHandle device_type$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("device_type"));
-
     public static VarHandle device_type$VH() {
-        return OrtOpenVINOProviderOptions.device_type$VH;
+        return constants$10.const$5;
     }
     /**
      * Getter for field:
@@ -55,7 +39,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static MemorySegment device_type$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtOpenVINOProviderOptions.device_type$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$10.const$5.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -64,23 +48,19 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void device_type$set(MemorySegment seg, MemorySegment x) {
-        OrtOpenVINOProviderOptions.device_type$VH.set(seg, x);
+        constants$10.const$5.set(seg, 0L, x);
     }
 
     public static MemorySegment device_type$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtOpenVINOProviderOptions.device_type$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$10.const$5.get(seg, index * sizeof());
     }
 
     public static void device_type$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtOpenVINOProviderOptions.device_type$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$10.const$5.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle enable_vpu_fast_compile$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("enable_vpu_fast_compile"));
-
     public static VarHandle enable_vpu_fast_compile$VH() {
-        return OrtOpenVINOProviderOptions.enable_vpu_fast_compile$VH;
+        return constants$11.const$0;
     }
     /**
      * Getter for field:
@@ -89,7 +69,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static byte enable_vpu_fast_compile$get(MemorySegment seg) {
-        return (byte) OrtOpenVINOProviderOptions.enable_vpu_fast_compile$VH.get(seg);
+        return (byte) constants$11.const$0.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -98,21 +78,19 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void enable_vpu_fast_compile$set(MemorySegment seg, byte x) {
-        OrtOpenVINOProviderOptions.enable_vpu_fast_compile$VH.set(seg, x);
+        constants$11.const$0.set(seg, 0L, x);
     }
 
     public static byte enable_vpu_fast_compile$get(MemorySegment seg, long index) {
-        return (byte) OrtOpenVINOProviderOptions.enable_vpu_fast_compile$VH.get(seg.asSlice(index * sizeof()));
+        return (byte) constants$11.const$0.get(seg, index * sizeof());
     }
 
     public static void enable_vpu_fast_compile$set(MemorySegment seg, long index, byte x) {
-        OrtOpenVINOProviderOptions.enable_vpu_fast_compile$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$0.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle device_id$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("device_id"));
-
     public static VarHandle device_id$VH() {
-        return OrtOpenVINOProviderOptions.device_id$VH;
+        return constants$11.const$1;
     }
     /**
      * Getter for field:
@@ -121,7 +99,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static MemorySegment device_id$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtOpenVINOProviderOptions.device_id$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$11.const$1.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -130,55 +108,49 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void device_id$set(MemorySegment seg, MemorySegment x) {
-        OrtOpenVINOProviderOptions.device_id$VH.set(seg, x);
+        constants$11.const$1.set(seg, 0L, x);
     }
 
     public static MemorySegment device_id$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtOpenVINOProviderOptions.device_id$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$11.const$1.get(seg, index * sizeof());
     }
 
     public static void device_id$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtOpenVINOProviderOptions.device_id$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$1.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle num_of_threads$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("num_of_threads"));
-
     public static VarHandle num_of_threads$VH() {
-        return OrtOpenVINOProviderOptions.num_of_threads$VH;
+        return constants$11.const$2;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * size_t num_of_threads;
+     * unsigned long num_of_threads;
      * }
      */
     public static long num_of_threads$get(MemorySegment seg) {
-        return (long) OrtOpenVINOProviderOptions.num_of_threads$VH.get(seg);
+        return (long) constants$11.const$2.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * size_t num_of_threads;
+     * unsigned long num_of_threads;
      * }
      */
     public static void num_of_threads$set(MemorySegment seg, long x) {
-        OrtOpenVINOProviderOptions.num_of_threads$VH.set(seg, x);
+        constants$11.const$2.set(seg, 0L, x);
     }
 
     public static long num_of_threads$get(MemorySegment seg, long index) {
-        return (long) OrtOpenVINOProviderOptions.num_of_threads$VH.get(seg.asSlice(index * sizeof()));
+        return (long) constants$11.const$2.get(seg, index * sizeof());
     }
 
     public static void num_of_threads$set(MemorySegment seg, long index, long x) {
-        OrtOpenVINOProviderOptions.num_of_threads$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$2.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle cache_dir$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cache_dir"));
-
     public static VarHandle cache_dir$VH() {
-        return OrtOpenVINOProviderOptions.cache_dir$VH;
+        return constants$11.const$3;
     }
     /**
      * Getter for field:
@@ -187,7 +159,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static MemorySegment cache_dir$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtOpenVINOProviderOptions.cache_dir$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$11.const$3.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -196,22 +168,19 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void cache_dir$set(MemorySegment seg, MemorySegment x) {
-        OrtOpenVINOProviderOptions.cache_dir$VH.set(seg, x);
+        constants$11.const$3.set(seg, 0L, x);
     }
 
     public static MemorySegment cache_dir$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtOpenVINOProviderOptions.cache_dir$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$11.const$3.get(seg, index * sizeof());
     }
 
     public static void cache_dir$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtOpenVINOProviderOptions.cache_dir$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$3.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle context$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("context"));
-
     public static VarHandle context$VH() {
-        return OrtOpenVINOProviderOptions.context$VH;
+        return constants$11.const$4;
     }
     /**
      * Getter for field:
@@ -220,7 +189,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static MemorySegment context$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtOpenVINOProviderOptions.context$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$11.const$4.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -229,23 +198,19 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void context$set(MemorySegment seg, MemorySegment x) {
-        OrtOpenVINOProviderOptions.context$VH.set(seg, x);
+        constants$11.const$4.set(seg, 0L, x);
     }
 
     public static MemorySegment context$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtOpenVINOProviderOptions.context$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$11.const$4.get(seg, index * sizeof());
     }
 
     public static void context$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtOpenVINOProviderOptions.context$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$4.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle enable_opencl_throttling$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("enable_opencl_throttling"));
-
     public static VarHandle enable_opencl_throttling$VH() {
-        return OrtOpenVINOProviderOptions.enable_opencl_throttling$VH;
+        return constants$11.const$5;
     }
     /**
      * Getter for field:
@@ -254,7 +219,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static byte enable_opencl_throttling$get(MemorySegment seg) {
-        return (byte) OrtOpenVINOProviderOptions.enable_opencl_throttling$VH.get(seg);
+        return (byte) constants$11.const$5.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -263,22 +228,19 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void enable_opencl_throttling$set(MemorySegment seg, byte x) {
-        OrtOpenVINOProviderOptions.enable_opencl_throttling$VH.set(seg, x);
+        constants$11.const$5.set(seg, 0L, x);
     }
 
     public static byte enable_opencl_throttling$get(MemorySegment seg, long index) {
-        return (byte) OrtOpenVINOProviderOptions.enable_opencl_throttling$VH.get(seg.asSlice(index * sizeof()));
+        return (byte) constants$11.const$5.get(seg, index * sizeof());
     }
 
     public static void enable_opencl_throttling$set(MemorySegment seg, long index, byte x) {
-        OrtOpenVINOProviderOptions.enable_opencl_throttling$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$11.const$5.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle enable_dynamic_shapes$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("enable_dynamic_shapes"));
-
     public static VarHandle enable_dynamic_shapes$VH() {
-        return OrtOpenVINOProviderOptions.enable_dynamic_shapes$VH;
+        return constants$12.const$0;
     }
     /**
      * Getter for field:
@@ -287,7 +249,7 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static byte enable_dynamic_shapes$get(MemorySegment seg) {
-        return (byte) OrtOpenVINOProviderOptions.enable_dynamic_shapes$VH.get(seg);
+        return (byte) constants$12.const$0.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -296,15 +258,15 @@ public class OrtOpenVINOProviderOptions {
      * }
      */
     public static void enable_dynamic_shapes$set(MemorySegment seg, byte x) {
-        OrtOpenVINOProviderOptions.enable_dynamic_shapes$VH.set(seg, x);
+        constants$12.const$0.set(seg, 0L, x);
     }
 
     public static byte enable_dynamic_shapes$get(MemorySegment seg, long index) {
-        return (byte) OrtOpenVINOProviderOptions.enable_dynamic_shapes$VH.get(seg.asSlice(index * sizeof()));
+        return (byte) constants$12.const$0.get(seg, index * sizeof());
     }
 
     public static void enable_dynamic_shapes$set(MemorySegment seg, long index, byte x) {
-        OrtOpenVINOProviderOptions.enable_dynamic_shapes$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$12.const$0.set(seg, index * sizeof(), x);
     }
 
     public static long sizeof() {
@@ -319,7 +281,7 @@ public class OrtOpenVINOProviderOptions {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) {
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) {
         return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope);
     }
 }
