@@ -17,16 +17,15 @@ public interface RegisterCustomOpsFn {
 
     java.lang.foreign.MemorySegment apply(java.lang.foreign.MemorySegment options, java.lang.foreign.MemorySegment api);
 
-    static MemorySegment allocate(RegisterCustomOpsFn fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(RegisterCustomOpsFn.class, fi, constants$1.RegisterCustomOpsFn$FUNC, scope);
+    static MemorySegment allocate(RegisterCustomOpsFn fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$15.const$3, fi, constants$15.const$2, scope);
     }
 
-    static RegisterCustomOpsFn ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static RegisterCustomOpsFn ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _options, java.lang.foreign.MemorySegment _api) -> {
             try {
-                return (java.lang.foreign.MemorySegment)
-                        constants$1.RegisterCustomOpsFn$MH.invokeExact(symbol, _options, _api);
+                return (java.lang.foreign.MemorySegment) constants$15.const$4.invokeExact(symbol, _options, _api);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
